Canvis de Gemini

--- a/DashboardIncidencies/package.json
+++ b/DashboardIncidencies/package.json
@@ -3,14 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://<EL-TEU-USUARI-DE-GITHUB>.github.io/<EL-NOM-DEL-TEU-REPOSITORI>",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "tsc --noEmit",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
